--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -12,29 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "openvidu-browser": "1.1.1"
+    "@angular/animations": "5.0.5",
+    "@angular/common": "5.0.5",
+    "@angular/compiler": "5.0.5",
+    "@angular/core": "5.0.5",
+    "@angular/flex-layout": "2.0.0-beta.10-4905443",
+    "@angular/forms": "5.0.5",
+    "@angular/http": "5.0.5",
+    "@angular/material": "5.0.0-rc.1",
+    "@angular/cdk": "5.0.0-rc.2",
+    "@angular/platform-browser": "5.0.5",
+    "@angular/platform-browser-dynamic": "5.0.5",
+    "@angular/router": "5.0.5",
+    "core-js": "2.5.1",
+    "hammerjs": "2.0.8",
+    "rxjs": "5.5.3",
+    "zone.js": "0.8.18",
+    "openvidu-browser": "1.1.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.2",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "1.5.5",
+    "@angular/compiler-cli": "5.0.5",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "^3.0.1",
+    "codelyzer": "4.0.1",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
@@ -44,8 +45,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
-    "tslint": "^5.1.0",
-    "typescript": "~2.3.3"
+    "ts-node": "3.3.0",
+    "tslint": "5.8.0",
+    "typescript": "2.4.2"
   }
 }
