--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.kurento</groupId>
-		<artifactId>kurento-parent-pom</artifactId>
-		<version>6.6.2</version>
-	</parent>
-
 	<groupId>io.openvidu</groupId>
 	<artifactId>openvidu-parent</artifactId>
 	<version>1.1.0</version>
@@ -47,16 +41,49 @@
 	</developers>
 
 	<properties>
-		<!-- OpenVidu versions -->
-		<version.openvidu>1.1.0</version.openvidu>
-
-		<version.kurento.jsonrpc.js>5.1.3</version.kurento.jsonrpc.js>
+		<version.kurento>6.6.2</version.kurento>
+		<version.spring-boot>1.4.2.RELEASE</version.spring-boot>
+		<version.junit>4.12</version.junit>
+		<version.slf4j>1.7.13</version.slf4j>
+		<version.mockito>1.10.19</version.mockito>
+		<version.powermock>1.6.3</version.powermock>
+		<version.hamcrest-core>1.3</version.hamcrest-core>
+		<version.hamcrest-library>1.3</version.hamcrest-library>
+		<version.json-simple>1.1.1</version.json-simple>
+		<version.httpclient>4.5.4</version.httpclient>
+		<version.enforcer.plugin>1.4.1</version.enforcer.plugin>
+		<version.eclipse.plugin>2.10</version.eclipse.plugin>
 
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
 		<openvidu.scm.url>https://github.com/OpenVidu/openvidu</openvidu.scm.url>
 		<openvidu.scm.connection>git@github.com:OpenVidu/openvidu.git</openvidu.scm.connection>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- ************** -->
+		<!-- Build settings -->
+		<!-- ************** -->
+
+		<!-- Cross plugins settings -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- maven-compiler-plugin -->
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+
+		<!-- Options to override the compiler arguments directly on the compiler 
+			arument line to separate between what the IDE understands as the source level 
+			and what the Maven compiler actually use. -->
+		<maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
+		<maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
+
+		<!-- maven-enforcer-plugin -->
+		<maven.min.version>3.0.3</maven.min.version>
+		<jdk.min.version>${maven.compiler.source}</jdk.min.version>
+		<jdk.max.version>${maven.compiler.source}</jdk.max.version>
 	</properties>
 
 	<distributionManagement>
@@ -69,6 +96,97 @@
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+
+				<!-- Check for the minimum version of Java and Maven. Runs during the 
+					validate phase. -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>enforce-java-version</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireJavaVersion>
+									<message>To build this project JDK ${jdk.min.version} (or
+										greater) is required. Please install it.</message>
+									<version>${jdk.min.version}</version>
+								</requireJavaVersion>
+							</rules>
+						</configuration>
+					</execution>
+					<execution>
+						<id>enforce-maven-version</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<message>To build this project Maven ${maven.min.version} (or
+										greater) is required. Please install it.</message>
+									<version>${maven.min.version}</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+					<execution>
+						<id>enforce-bytecode-version</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<enforceBytecodeVersion>
+									<maxJdkVersion>${jdk.max.version}</maxJdkVersion>
+								</enforceBytecodeVersion>
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+					<execution>
+						<id>enforce-ban-duplicate-classes</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<banDuplicateClasses>
+									<findAllDuplicates>true</findAllDuplicates>
+								</banDuplicateClasses>
+							</rules>
+							<fail>false</fail>
+						</configuration>
+					</execution>
+					<execution>
+						<id>enforce-ban-circular-dependencies</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<banCircularDependencies />
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>extra-enforcer-rules</artifactId>
+						<version>1.0-beta-4</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
 
 	<profiles>
 		<profile>
@@ -191,33 +309,22 @@
 			<dependency>
 				<groupId>io.openvidu</groupId>
 				<artifactId>openvidu-server</artifactId>
-				<version>${version.openvidu}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openvidu</groupId>
 				<artifactId>openvidu-client</artifactId>
-				<version>${version.openvidu}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openvidu</groupId>
 				<artifactId>openvidu-test</artifactId>
-				<version>${version.openvidu}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openvidu</groupId>
 				<artifactId>openvidu-test-e2e</artifactId>
-				<version>${version.openvidu}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.openvidu</groupId>
 				<artifactId>openvidu-java-client</artifactId>
-				<version>${version.openvidu}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.kurento</groupId>
-				<artifactId>kurento-jsonrpc-js</artifactId>
-				<version>${version.kurento.jsonrpc.js}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
