--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "openvidu-browser",
-  "version": "1.3.0",
-  "description": "OpenVidu Browser",
-  "author": "OpenVidu",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/OpenVidu/openvidu"
-  },
-  "main": "lib/OpenVidu/index.js",
-  "types": "lib/OpenVidu/index.d.ts",
-  "scripts": {
-    "browserify": "VERSION=${VERSION:-}; cd ts/OpenVidu && browserify Main.ts -p [ tsify ] --exclude kurento-browser-extensions --debug -o ../../static/js/openvidu-browser-$VERSION.js -v",
-    "browserify-prod": "VERSION=${VERSION:-}; cd ts/OpenVidu && browserify --debug Main.ts -p [ tsify ] --exclude kurento-browser-extensions | uglifyjs --source-map content=inline --output ../../static/js/openvidu-browser-$VERSION.min.js",
-    "updatetsc": "cd ts/OpenViduInternal && tsc && cd ../OpenVidu && tsc && cd ../.. && tsc --declaration ts/OpenVidu/index.ts --outDir lib --sourceMap && tsc --declaration ts/OpenVidu/Main.ts --outDir lib --sourceMap",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "cd ts/OpenViduInternal && tsc && cd ../OpenVidu && tsc && cd ../.. && tsc --declaration ts/OpenVidu/index.ts --outDir lib --sourceMap && tsc --declaration ts/OpenVidu/Main.ts --outDir lib --sourceMap"
-  },
-  "dependencies": {
-    "wolfy87-eventemitter": "5.2.4",
-    "webrtc-adapter": "6.0.4",
-    "uuid": "3.1.0",
-    "freeice": "2.2.0",
-    "inherits": "2.0.3",
-    "merge": "1.2.0",
-    "ua-parser-js": "0.7.17",
-    "hark": "1.1.6",
-    "sdp-translator": "0.1.24"
-  },
-  "devDependencies": {
-    "typescript": "2.6.2",
-    "browserify": "15.1.0",
-    "tsify": "3.0.4",
-    "uglify-js": "3.3.5"
-  }
+    "license": "Apache-2.0", 
+    "name": "openvidu-browser", 
+    "repository": {
+        "url": "git://github.com/OpenVidu/openvidu", 
+        "type": "git"
+    }, 
+    "author": "OpenVidu", 
+    "version": "1.4.0", 
+    "dependencies": {
+        "inherits": "2.0.3", 
+        "wolfy87-eventemitter": "5.2.4", 
+        "hark": "1.1.6", 
+        "uuid": "3.1.0", 
+        "sdp-translator": "0.1.24", 
+        "freeice": "2.2.0", 
+        "merge": "1.2.0", 
+        "ua-parser-js": "0.7.17", 
+        "webrtc-adapter": "6.0.4"
+    }, 
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1", 
+        "browserify-prod": "VERSION=${VERSION:-}; cd ts/OpenVidu && browserify --debug Main.ts -p [ tsify ] --exclude kurento-browser-extensions | uglifyjs --source-map content=inline --output ../../static/js/openvidu-browser-$VERSION.min.js", 
+        "browserify": "VERSION=${VERSION:-}; cd ts/OpenVidu && browserify Main.ts -p [ tsify ] --exclude kurento-browser-extensions --debug -o ../../static/js/openvidu-browser-$VERSION.js -v", 
+        "prepublish": "cd ts/OpenViduInternal && tsc && cd ../OpenVidu && tsc && cd ../.. && tsc --declaration ts/OpenVidu/index.ts --outDir lib --sourceMap && tsc --declaration ts/OpenVidu/Main.ts --outDir lib --sourceMap", 
+        "updatetsc": "cd ts/OpenViduInternal && tsc && cd ../OpenVidu && tsc && cd ../.. && tsc --declaration ts/OpenVidu/index.ts --outDir lib --sourceMap && tsc --declaration ts/OpenVidu/Main.ts --outDir lib --sourceMap"
+    }, 
+    "devDependencies": {
+        "tsify": "3.0.4", 
+        "typescript": "2.6.2", 
+        "browserify": "15.1.0", 
+        "uglify-js": "3.3.5"
+    }, 
+    "main": "lib/OpenVidu/index.js", 
+    "types": "lib/OpenVidu/index.d.ts", 
+    "description": "OpenVidu Browser"
 }
