--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "openvidu-testapp",
-  "version": "1.1.0",
-  "license": "Apache-2.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^4.4.3",
-    "@angular/cdk": "^2.0.0-beta.11",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.11",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "colormap": "^2.2.0",
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "openvidu-browser": "1.3.0",
-    "openvidu-node-client": "1.1.0",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "1.7.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "2.6.2"
-  }
+    "version": "1.4.0", 
+    "license": "Apache-2.0", 
+    "private": true, 
+    "dependencies": {
+        "zone.js": "^0.8.14", 
+        "@angular/animations": "^4.4.3", 
+        "colormap": "^2.2.0", 
+        "openvidu-browser": "1.4.0", 
+        "@angular/cdk": "^2.0.0-beta.11", 
+        "@angular/forms": "^4.2.4", 
+        "openvidu-node-client": "1.1.0", 
+        "core-js": "^2.4.1", 
+        "@angular/compiler": "^4.2.4", 
+        "@angular/core": "^4.2.4", 
+        "rxjs": "^5.4.2", 
+        "hammerjs": "^2.0.8", 
+        "@angular/common": "^4.2.4", 
+        "@angular/platform-browser": "^4.2.4", 
+        "@angular/material": "^2.0.0-beta.11", 
+        "@angular/http": "^4.2.4", 
+        "@angular/router": "^4.2.4", 
+        "@angular/platform-browser-dynamic": "^4.2.4", 
+        "@angular/flex-layout": "2.0.0-beta.9"
+    }, 
+    "scripts": {
+        "e2e": "ng e2e", 
+        "lint": "ng lint", 
+        "ng": "ng", 
+        "start": "ng serve", 
+        "build": "ng build", 
+        "test": "ng test"
+    }, 
+    "devDependencies": {
+        "@angular/language-service": "^4.2.4", 
+        "@angular/cli": "1.6.3", 
+        "@angular/compiler-cli": "^4.2.4", 
+        "@types/jasminewd2": "~2.0.2", 
+        "tslint": "~5.3.2", 
+        "@types/jasmine": "~2.5.53", 
+        "protractor": "~5.1.2", 
+        "karma-jasmine": "~1.1.0", 
+        "karma-cli": "~1.0.1", 
+        "karma-chrome-launcher": "2.2.0", 
+        "typescript": "2.6.2", 
+        "karma-jasmine-html-reporter": "^0.2.2", 
+        "karma-coverage-istanbul-reporter": "^1.3.0", 
+        "karma": "1.7.1", 
+        "codelyzer": "~3.1.1", 
+        "@types/node": "~6.0.60", 
+        "jasmine-spec-reporter": "~4.1.0", 
+        "jasmine-core": "~2.6.2", 
+        "ts-node": "~3.2.0"
+    }, 
+    "name": "openvidu-testapp"
 }
