--- a/openvidu-server/src/main/resources/log4j.properties
+++ b/openvidu-server/src/main/resources/log4j.properties
@@ -1,4 +1,10 @@
-log4j.rootLogger=info, stdout
+log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%p] %d [%.12t] %c (%M) - %m%n
+
+log4j.logger.io.openvidu.server.cdr.CallDetailRecord=INFO, cdr
+log4j.appender.cdr=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.cdr.File=log/CDR.log
+log4j.appender.cdr.layout=org.apache.log4j.PatternLayout
+log4j.appender.cdr.layout.ConversionPattern=%m\n
