--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -1,52 +1,52 @@
 {
-    "name": "frontend", 
-    "license": "MIT", 
-    "private": true, 
-    "version": "0.0.0", 
     "dependencies": {
-        "hammerjs": "2.0.8", 
-        "zone.js": "0.8.18", 
         "@angular/animations": "5.0.5", 
-        "openvidu-browser": "1.4.0", 
         "@angular/cdk": "5.0.0-rc.2", 
-        "@angular/forms": "5.0.5", 
-        "core-js": "2.5.1", 
+        "@angular/common": "5.0.5", 
         "@angular/compiler": "5.0.5", 
         "@angular/core": "5.0.5", 
-        "rxjs": "5.5.3", 
-        "@angular/common": "5.0.5", 
-        "@angular/platform-browser": "5.0.5", 
         "@angular/flex-layout": "2.0.0-beta.10-4905443", 
+        "@angular/forms": "5.0.5", 
         "@angular/http": "5.0.5", 
-        "@angular/router": "5.0.5", 
+        "@angular/material": "5.0.0-rc.1", 
+        "@angular/platform-browser": "5.0.5", 
         "@angular/platform-browser-dynamic": "5.0.5", 
-        "@angular/material": "5.0.0-rc.1"
-    }, 
-    "scripts": {
-        "start": "ng serve", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "e2e": "ng e2e", 
-        "build": "ng build", 
-        "test": "ng test"
+        "@angular/router": "5.0.5", 
+        "core-js": "2.5.1", 
+        "hammerjs": "2.0.8", 
+        "openvidu-browser": "1.5.0", 
+        "rxjs": "5.5.3", 
+        "zone.js": "0.8.18"
     }, 
     "devDependencies": {
         "@angular/cli": "1.5.5", 
         "@angular/compiler-cli": "5.0.5", 
-        "karma-jasmine-html-reporter": "^0.2.2", 
         "@types/jasmine": "2.5.38", 
-        "protractor": "~5.1.0", 
-        "tslint": "5.8.0", 
-        "karma-jasmine": "~1.1.0", 
-        "karma-cli": "~1.0.1", 
-        "karma-chrome-launcher": "~2.0.0", 
-        "typescript": "2.4.2", 
-        "karma-coverage-istanbul-reporter": "^0.2.0", 
-        "karma": "~1.4.1", 
         "@types/node": "~6.0.60", 
         "codelyzer": "4.0.1", 
-        "ts-node": "3.3.0", 
+        "jasmine-core": "~2.5.2", 
         "jasmine-spec-reporter": "~3.2.0", 
-        "jasmine-core": "~2.5.2"
-    }
+        "karma": "~1.4.1", 
+        "karma-chrome-launcher": "~2.0.0", 
+        "karma-cli": "~1.0.1", 
+        "karma-coverage-istanbul-reporter": "^0.2.0", 
+        "karma-jasmine": "~1.1.0", 
+        "karma-jasmine-html-reporter": "^0.2.2", 
+        "protractor": "~5.1.0", 
+        "ts-node": "3.3.0", 
+        "tslint": "5.8.0", 
+        "typescript": "2.4.2"
+    }, 
+    "license": "MIT", 
+    "name": "frontend", 
+    "private": true, 
+    "scripts": {
+        "build": "ng build", 
+        "e2e": "ng e2e", 
+        "lint": "ng lint", 
+        "ng": "ng", 
+        "start": "ng serve", 
+        "test": "ng test"
+    }, 
+    "version": "0.0.0"
 }
