--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -7,7 +7,9 @@ server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
 
 kms.uris=[\"ws://localhost:8888/kurento\"]
-
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
+openvidu.recording: false
+openvidu.recording.path: /opt/openvidu/recordings
+openvidu.recording.free-access: false
