CDR file only created when openvidu.cdr thanks to conditional logback.xml

--- a/openvidu-server/src/main/resources/application-ngrok.properties
+++ b/openvidu-server/src/main/resources/application-ngrok.properties
@@ -5,6 +5,9 @@ server.ssl.enabled: false
 server.address: 0.0.0.0
 
 kms.uris=[\"ws://localhost:8888/kurento\"]
-
 openvidu.secret: MY_SECRET
 openvidu.publicurl: ngrok
+openvidu.cdr: false
+openvidu.recording: false
+openvidu.recording.path: /opt/openvidu/recordings
+openvidu.recording.free-access: false
