POM updated (+ apache commons lang)

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -217,7 +217,11 @@
 			<artifactId>janino</artifactId>
 			<version>3.0.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 
