opentvide-test-e2e docker images typescript installation

--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -34,6 +34,9 @@ RUN npm install -g @angular/cli
 # http-server
 RUN npm install -g http-server
 
+# npm
+RUN npm install -g typescript
+
 # Docker
 #RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 #RUN add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
