--- a/openvidu-server/src/main/resources/application-ngrok.properties
+++ b/openvidu-server/src/main/resources/application-ngrok.properties
@@ -11,3 +11,4 @@ openvidu.cdr: false
 openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.free-access: false
+openvidu.recording.version: 1.8.0
