--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-server.port: 8443
 server.address: 0.0.0.0
 server.ssl.enabled: true
+openvidu.recording.version: 1.8.0
+
+
+
+server.port: 8443
 server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
-
 kms.uris=[\"ws://localhost:8888/kurento\"]
+
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
