autoReleaseAfterClose to true in nexus plugin

--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -161,10 +161,10 @@
 						<version>1.6.8</version>
 						<extensions>true</extensions>
 						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>false</autoReleaseAfterClose>
-						</configuration>
+        						<serverId>ossrh</serverId>
+        						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+        						<autoReleaseAfterClose>true</autoReleaseAfterClose>
+      						</configuration>
 					</plugin>
 					<plugin>
 						<artifactId>maven-resources-plugin</artifactId>
